[package]
name = "monado"
version = "0.1.0"
edition = "2024"
authors = ["VSebastian8"]
license = "MPL-2.0"
description = "Monad trait and procedural macro for the do notation"
repository = "https://github.com/VSebastian8/rust-macros/tree/master/monado"
keywords = ["macro", "monad", "functional"]

[dependencies]
