[package]
name = "mtimed"
version = "0.1.0"
edition = "2024"
authors = ["VSebastian8"]
license = "MPL-2.0"
description = "Declarative macro for timing any instruction block"
repository = "https://github.com/VSebastian8/rust-macros/tree/master/mtimed"
keywords = ["macro", "time", "benchmark"]

[dependencies]
